--- a/src/TitleBar/titlebar.scss
+++ b/src/TitleBar/titlebar.scss
@@ -1,5 +1,13 @@
 .title-bar {
     header {
-        position: relative;
+        position: fixed;
+    }
+
+    .profile-picture {
+        margin-right: 10px;
+    }
+    
+    button {
+        margin-left: 10px;
     }
 }
