--- a/src/TitleBar/titlebar.scss
+++ b/src/TitleBar/titlebar.scss
@@ -1,6 +1,26 @@
 .title-bar {
     header {
         position: fixed;
+        min-height: 64px;
+
+        .right-toolbar-items {
+            display: flex;
+            align-items: center;
+            height: 64px;
+        }
+
+        
+        @media only screen and (max-width: 600px) {
+            & > div {
+                align-items: center;
+                justify-content: end !important;
+            }
+            
+            .app-title {
+                    display: none;
+            }
+        }
+        
     }
 
     .profile-picture {
