--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,10 @@ html, body, #root, .screen {
 
   display: flex;
   flex-direction: column;
+
+  //height: 100%;
+  //margin-bottom: -55px;
+  overflow: auto;
 }
 
 
