--- a/src/Main/main.scss
+++ b/src/Main/main.scss
@@ -1,6 +1,7 @@
 .main-page {
     padding: 15px;
-    overflow-y: scroll;
+    overflow-y: auto;
+    height: calc(100% - 55px);
 
     .friends-container {
         .friends-header {
