--- a/src/Profile/profile.scss
+++ b/src/Profile/profile.scss
@@ -1,24 +1,36 @@
-.profile-paper {
-  padding: 20px;
-  display: flex;
-  margin: 20px 200px;
+.profile-page {
+  overflow: auto;
+  height: calc(100% - 55px);
 
-  .showcase {
+  .profile-paper {
+    padding: 20px;
     display: flex;
-    align-items: center;
-
-    @media only screen and (max-width: 600px) {
-      // /flex-grow: 1;
+    margin: 20px 200px;
+  
+    .showcase {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      flex-wrap: wrap;
+  
+      @media only screen and (max-width: 600px) {
+        justify-content: center;
+        .main {
+          flex-basis: 100%;
+          width: 100%;
+        }
+      }
+  
+      .stories {
+        width: initial;
+        
+      }
     }
-
-    .stories {
-      width: initial;
-      
+  
+    @media only screen and (max-width: 1000px) {
+      margin: 20px 20px;
     }
-  }
-
-  @media only screen and (max-width: 1000px) {
-    margin: 20px 20px;
   }
 }
 
