--- a/src/Login/login.scss
+++ b/src/Login/login.scss
@@ -1,17 +1,23 @@
 .login-page {
     flex: 1 1 auto;
-    flex-grow: 1;
-    display: flex;
+    //flex-grow: 1;
+    //display: flex;
     justify-content: center;
-    align-items: center;
+    
+    //align-items: center;
     text-align: center;
 
     overflow: auto;
 
     .login-paper {
         margin: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        
         width: 50%;
         padding: 20px;
+        
+        
 
         @media only screen and (max-width: 600px) {
             width: 95%;
