--- a/src/Login/login.scss
+++ b/src/Login/login.scss
@@ -53,6 +53,22 @@
                     border-radius: 4px;
                     border: 1px solid rgba(0, 0, 0, 0.27) !important;
                 }
+
+                &.dark {
+                    .react-date-picker__wrapper {
+                        padding: 10px;
+                        border-radius: 4px;
+                        border: 1px solid rgba(255, 255, 255, 0.23) !important;
+                        button {
+                            svg {
+                                stroke: rgba(255, 255, 255, 0.884);
+                                &:hover {
+                                    stroke: rgb(255, 255, 255);
+                                }
+                            }
+                        }
+                    }   
+                }
             }
         }
 
