--- a/src/Stories/stories.scss
+++ b/src/Stories/stories.scss
@@ -9,6 +9,10 @@
   margin-left: -15px;
   padding-left: 15px;
 
+  .stories-alert {
+    width: calc(100% - 5px) !important;
+  }
+
   .story-icon {
     margin: 7px;
     position: relative;
@@ -21,7 +25,7 @@
     width: 80px;
     height: 80px;
 
-    box-shadow: 0px 2px 12px 1px rgba(255, 234, 130, 0.329);
+    box-shadow: 0px 2px 12px -4px rgba(255, 234, 130, 0.329);
     .profile-picture {
       box-shadow: 3px 3px 5px -1px inset rgba(0, 0, 0, 0.1);
       position: relative;
@@ -65,7 +69,7 @@
 .anchorEl {
   
   .story-icon {
-    box-shadow: 0px 1px 12px 1px rgb(255, 234, 130);
+    box-shadow: 0px 1px 12px -4px rgba(255, 234, 130, 0.616);
   }
 }
 
@@ -90,10 +94,21 @@
     box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.2);
   }
 
-  .story-popover-name {
-    font-weight: bold;
-    margin-top: -5px;
+  .name-info {
+    display: flex;
+    flex-direction: column;
+    .story-popover-name {
+      font-weight: bold;
+      margin-top: -10px;
+    }
+  
+    .story-popover-username {
+      font-weight: bold;
+      margin-top: -5px;
+    }
   }
+
+  
 
   & > div {
     display: flex;
